Populated main activity, wrong encoding

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
-<resources>
+<resources
+    xmlns:xliff="http://schemas.android.com/tools">
+
     <string name="app_name">Sibirskie Seti</string>
     <string name="action_settings">Settings</string>
     <string name="button_login_text">Log in</string>
@@ -11,13 +13,18 @@
     <!---->
     <string name="title_activity_main">Personal Cabinet</string>
     <string name="login_failed">Login failed</string>
-    <string name="current_balance">Current balance</string>
+    <string name="current_balance">Your current balance</string>
     <string name="wallet_image">Wallet image</string>
     <string name="current_plan">Your current plan</string>
-    <string name="next_charge">Next charge date</string>
+    <string name="charge_rate">Your charge rate</string>
     <string name="show_last_charges">Show last charges</string>
     <string name="take_loan">Take loan</string>
     <string name="company_logo">Company logo</string>
     <string name="phone">8-800-250-0211</string>
-    <string name="login_welcome">Welcome to the Sibirskie Seti personal cabinet. Please log in.</string>
+    <string name="login_welcome">Sibirskie Seti\nPlease log in</string>
+
+    <string name="balance">
+        <xliff:g id="s">%s</xliff:g> R.
+    </string>
+
 </resources>
