--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,9 @@
-<resources
-    xmlns:xliff="http://schemas.android.com/tools">
+<resources xmlns:xliff="http://schemas.android.com/tools">
 
     <string name="app_name">Sibirskie Seti</string>
     <string name="action_settings">Settings</string>
     <string name="button_login_text">Log in</string>
-    <string name="activity_login_title">Sibirskie Seti</string>
+    <string name="title_activity_login">Sibirskie Seti</string>
     <string name="hint_name">username</string>
     <string name="hint_pass">password</string>
     <!--DELETE IT-->
@@ -26,5 +25,14 @@
     <string name="balance">
         <xliff:g id="s">%s</xliff:g> R.
     </string>
+    <string name="parsing_error">Error parsing server response</string>
+    <string name="please_wait">Please wait</string>
+    <string name="title_activity_loan">ActivityLoan</string>
+    <string name="open_loan_failed">Error showing loan options</string>
+    <string name="expiration_date">The loan will expire on</string>
+    <string name="get_loan">Get loan</string>
+    <string name="choose_sum">Choose the sum to loan</string>
+    <string name="empty_sum">...</string>
+    <string name="dialog_sum_title">Choose sum</string>
 
 </resources>
