--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,5 +35,6 @@
     <string name="title_activity_detail">Details</string>
     <string name="details">Details:</string>
     <string name="open_details_failed">Failed opening details</string>
+    <string name="site_payment">Payment Web page</string>
 
 </resources>
